# cargo-changeset

./: .dockerignore  .gitignore  .yamlfix.toml  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  README.md  zizmor.yml
.changeset/changesets/: genuinely-thriving-diamondback.md  obviously-especial-anteater.md  possibly-genuine-moray.md  richly-exalting-elephant.md  statically-infallible-bullfrog.md  unwillingly-capital-boar.md  worryingly-brisk-gull.md
.github/actions/verify/: action.yml
.github/test-fixtures/workspace/.changeset/changesets/: test-bump.md
.github/workflows/: ci.yml  dist.yml  docker-test.yml  docker.yml  lint-workflows.yml  publish.yml  release-workflow.yml  release.yml  verify.yml
crates/cargo-changeset/: Cargo.toml  build.rs
crates/cargo-changeset/src/: environment.rs  error.rs  interaction.rs  main.rs
crates/cargo-changeset/src/commands/: add.rs  init.rs  manage.rs  mod.rs  release.rs  status.rs  verify.rs
crates/cargo-changeset/src/output/: formatter.rs  mod.rs  plain.rs  status.rs
crates/cargo-changeset/src/verification/: context.rs  engine.rs  mod.rs  reader.rs  result.rs  traits.rs
crates/cargo-changeset/src/verification/rules/: coverage.rs  deleted.rs  mod.rs
crates/cargo-changeset/tests/: add_command.rs  cargo_dispatch.rs  init_command.rs  manage_integration.rs  saga_error_display.rs  status_command.rs  verify_command.rs
crates/changeset-changelog/: Cargo.toml
crates/changeset-changelog/src/: changelog.rs  config.rs  entry.rs  error.rs  forge.rs  format.rs  lib.rs
crates/changeset-core/: Cargo.toml
crates/changeset-core/src/: error.rs  lib.rs  path.rs  types.rs
crates/changeset-git/: Cargo.toml
crates/changeset-git/src/: error.rs  lib.rs  types.rs
crates/changeset-git/src/repository/: commit.rs  diff.rs  files.rs  mod.rs  remote.rs  staging.rs  status.rs  tag.rs
crates/changeset-manifest/: Cargo.toml
crates/changeset-manifest/src/: config.rs  error.rs  lib.rs  reader.rs  writer.rs
crates/changeset-operations/: Cargo.toml
crates/changeset-operations/src/: error.rs  lib.rs  mocks.rs  planner.rs  testing.rs  types.rs
crates/changeset-operations/src/operations/: add.rs  changelog_aggregation.rs  init.rs  mod.rs  release.rs  release_validator.rs  status.rs  verify.rs  version_planner.rs
crates/changeset-operations/src/operations/release/: context.rs  mod.rs  operation.rs  saga_data.rs  saga_steps.rs  validator.rs
crates/changeset-operations/src/operations/release/steps/: mod.rs
crates/changeset-operations/src/providers/: changelog.rs  changeset_io.rs  git.rs  manifest.rs  mod.rs  project.rs  release_state_io.rs
crates/changeset-operations/src/traits/: changelog_writer.rs  changeset_io.rs  git_provider.rs  inherited_version_checker.rs  init_interaction.rs  interaction.rs  manifest_writer.rs  mod.rs  project_provider.rs  release_state_io.rs
crates/changeset-operations/src/verification/: context.rs  engine.rs  mod.rs  result.rs
crates/changeset-operations/src/verification/rules/: coverage.rs  deleted.rs  mod.rs
crates/changeset-operations/tests/: changeset_io_integration.rs  release_integration.rs  saga_system_tests.rs
crates/changeset-parse/: Cargo.toml
crates/changeset-parse/src/: error.rs  lib.rs  parse.rs  serialize.rs
crates/changeset-project/: Cargo.toml  README.md
crates/changeset-project/src/: config.rs  error.rs  lib.rs  manifest.rs  mapping.rs  project.rs  release_state.rs
crates/changeset-project/tests/: discovery.rs
crates/changeset-project/tests/fixtures/root_package_workspace/crates/member/: Cargo.toml
crates/changeset-project/tests/fixtures/virtual_workspace/crates/crate_b/: Cargo.toml
crates/changeset-project/tests/fixtures/workspace_with_exclude/crates/included/: Cargo.toml
crates/changeset-saga/: Cargo.toml
crates/changeset-saga/src/: audit.rs  builder.rs  cloneable.rs  erased.rs  error.rs  lib.rs  saga.rs  step.rs
crates/changeset-saga/tests/: audit_log.rs  compensation.rs  compensation_failure.rs  conditional_steps.rs  data_flow.rs
crates/changeset-version/: Cargo.toml
crates/changeset-version/src/: lib.rs
crates/changeset-workspace/: Cargo.toml
crates/changeset-workspace/src/: error.rs  lib.rs  manifest.rs  workspace.rs
crates/changeset-workspace/tests/: discovery.rs
crates/changeset-workspace/tests/fixtures/root_package_workspace/: Cargo.toml
crates/changeset-workspace/tests/fixtures/virtual_workspace/crates/crate_a/: Cargo.toml
crates/changeset-workspace/tests/fixtures/workspace_with_exclude/: Cargo.toml
crates/changeset-workspace/tests/fixtures/workspace_with_exclude/crates/excluded/: Cargo.toml
docker/: entrypoint.sh
scripts/: tmux-vim-dev-setup
