[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/lwagner/cargo-changeset"
authors = ["Lukas Wagner <appdev.lukaswagner@gmail.com>"]

[workspace.dependencies]
# Internal crates - versions managed independently in each crate
changeset-core = { path = "crates/changeset-core" }
changeset-parse = { path = "crates/changeset-parse" }
changeset-git = { path = "crates/changeset-git" }
changeset-version = { path = "crates/changeset-version" }

# External dependencies
anyhow = "1"
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
clap = { version = "4.5.57", features = ["derive"] }
toml = "0.9.11"
semver = "1.0.27"
