[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.85.0"
license = "MIT"
repository = "https://github.com/lwagner/cargo-changeset"
authors = ["Lukas Wagner <appdev.lukaswagner@gmail.com>"]

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
needless_pass_by_value = "allow"             # needed for Bevy systems
type_complexity = "allow"                    # Some bevy types are just complex. We do not care about that. Clippy's type complexity metric is too strict
unwrap_used = "deny"

[workspace.dependencies]
# Internal crates - versions managed independently in each crate
changeset-core = { path = "crates/changeset-core" }
changeset-parse = { path = "crates/changeset-parse" }
changeset-git = { path = "crates/changeset-git" }
changeset-version = { path = "crates/changeset-version" }
changeset-project = { path = "crates/changeset-project" }
changeset-changelog = { path = "crates/changeset-changelog" }

# External dependencies
indexmap = { version = "2.7.1", features = ["serde"] }
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yml = "0.0.12"
clap = { version = "4.5.57", features = ["derive"] }
toml = "0.9.11"
semver = "1.0.27"
glob = "0.3.3"
git2 = "0.20"
dialoguer = "0.12.0"
petname = "2.0.2"
