[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.85.0"
license = "MIT"
repository = "https://github.com/lukidoescode/cargo-changeset"
homepage = "https://github.com/lukidoescode/cargo-changeset"
authors = ["Lukas Wagner <appdev.lukaswagner@gmail.com>"]

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
needless_pass_by_value = "allow"             # needed for Bevy systems
type_complexity = "allow"                    # Some bevy types are just complex. We do not care about that. Clippy's type complexity metric is too strict
struct_excessive_bools = "allow"             # CLI input structs map directly to command-line flags
unwrap_used = "deny"

[workspace.metadata]

[workspace.metadata.changeset]
commit = true
tags = true
keep_changesets = false
tag_format = "crate-prefixed"
changelog = "root"
comparison_links = "auto"
zero_version_behavior = "effective-minor"

[workspace.dependencies]
# Internal crates - versions managed independently in each crate
changeset-core = { path = "crates/changeset-core", version = "0.0.1" }
changeset-parse = { path = "crates/changeset-parse", version = "0.0.1" }
changeset-git = { path = "crates/changeset-git", version = "0.0.1" }
changeset-version = { path = "crates/changeset-version", version = "0.0.1" }
changeset-project = { path = "crates/changeset-project", version = "0.0.1" }
changeset-changelog = { path = "crates/changeset-changelog", version = "0.0.1" }
changeset-operations = { path = "crates/changeset-operations", version = "0.0.1" }
changeset-manifest = { path = "crates/changeset-manifest", version = "0.0.1" }
changeset-saga = { path = "crates/changeset-saga", version = "0.0.1" }

# External dependencies
indexmap = { version = "2.7.1", features = ["serde"] }
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yml = "0.0.12"
clap = { version = "4.5.57", features = ["derive"] }
toml = "0.9.11"
semver = "1.0.27"
glob = "0.3.3"
git2 = "0.20"
dialoguer = "0.12.0"
petname = "2.0.2"
toml_edit = "0.25.0"
