[package]
name = "cargo-changeset"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "A cargo subcommand for managing changesets"

[[bin]]
name = "cargo-changeset"
path = "src/main.rs"

[dependencies]
changeset-core = { workspace = true }
changeset-parse = { workspace = true }
changeset-git = { workspace = true }
changeset-version = { workspace = true }
changeset-workspace = { workspace = true }
clap = { workspace = true }
dialoguer = { workspace = true }
indexmap = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
assert_cmd = "2.1"
predicates = "3.1"
expectrl = "0.8"
tempfile = "3.25"
semver = { workspace = true }
