[package]
name = "cargo-changeset"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "A cargo subcommand for managing changesets"
readme = "../../README.md"
keywords = ["cargo", "changeset", "release", "changelog", "versioning"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]

[[bin]]
name = "cargo-changeset"
path = "src/main.rs"

[dependencies]
changeset-core = { workspace = true }
changeset-git = { workspace = true }
changeset-manifest = { workspace = true }
changeset-operations = { workspace = true }
changeset-project = { workspace = true }
changeset-version = { workspace = true }
clap = { workspace = true }
dialoguer = { workspace = true }
tempfile = "3.25"
thiserror = { workspace = true }

[build-dependencies]
chrono = { version = "0.4.44", features = ["clock"], default-features = false }

[dev-dependencies]
assert_cmd = "2.1"
predicates = "3.1"
expectrl = "0.8"
indexmap = { workspace = true }
semver = { workspace = true }
