[package]
name = "changeset-changelog"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Changelog generation and management for changesets"
readme = "README.md"
keywords = ["cargo", "changeset", "changelog", "release"]
categories = ["development-tools::cargo-plugins"]

[dependencies]
changeset-core = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["std"] }
semver = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
url = "2.5"

[dev-dependencies]
tempfile = "3.25"
toml = { workspace = true }

[lints]
workspace = true
