[package]
name = "changeset-core"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core types and traits for cargo-changeset"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
semver = { workspace = true }
thiserror = { workspace = true }
