[package]
name = "changeset-core"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Core types and traits for cargo-changeset"
readme = "README.md"
keywords = ["cargo", "changeset", "release", "versioning"]
categories = ["development-tools::cargo-plugins"]

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
semver = { workspace = true }
thiserror = { workspace = true }
