[package]
name = "changeset-git"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Git operations for cargo-changeset"

[dependencies]
dunce = "1.0.5"
git2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
anyhow = "1.0"
tempfile = "3"

[lints]
workspace = true
