[package]
name = "changeset-git"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Git operations for cargo-changeset"
readme = "README.md"
keywords = ["cargo", "changeset", "git", "release"]
categories = ["development-tools::cargo-plugins"]

[dependencies]
dunce = "1.0.5"
git2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
anyhow = "1.0"
tempfile = "3"

[lints]
workspace = true
