[package]
name = "changeset-manifest"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Format-preserving Cargo.toml read/write operations"
readme = "README.md"
keywords = ["cargo", "changeset", "toml", "manifest", "release"]
categories = ["development-tools::cargo-plugins"]

[dependencies]
semver = { workspace = true }
thiserror = { workspace = true }
toml_edit = { workspace = true }

[dev-dependencies]
tempfile = "3.25"

[lints]
workspace = true
