[package]
name = "changeset-operations"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core operations and business logic for cargo-changeset"

[dependencies]
changeset-core = { workspace = true }
changeset-parse = { workspace = true }
changeset-project = { workspace = true }
changeset-git = { workspace = true }
changeset-version = { workspace = true }
indexmap = { workspace = true }
semver = { workspace = true }
thiserror = { workspace = true }
petname = { workspace = true }

[dev-dependencies]
anyhow = "1.0.101"
tempfile = "3.25"

[lints]
workspace = true
