[package]
name = "changeset-operations"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Core operations and business logic for cargo-changeset"
readme = "README.md"
keywords = ["cargo", "changeset", "release", "versioning"]
categories = ["development-tools::cargo-plugins"]

[dependencies]
changeset-changelog = { workspace = true }
changeset-core = { workspace = true }
changeset-git = { workspace = true }
changeset-manifest = { workspace = true }
changeset-parse = { workspace = true }
changeset-project = { workspace = true }
changeset-saga = { workspace = true }
changeset-version = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
indexmap = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
petname = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
anyhow = "1.0.101"
changeset-project = { workspace = true, features = ["testing"] }
tempfile = "3.25"

[lints]
workspace = true
