[package]
name = "changeset-parse"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Parser for changeset files"

[dependencies]
changeset-core = { workspace = true }
indexmap = { workspace = true }
serde = { workspace = true }
serde_with = { version = "3.16.1", features = ["indexmap_2"] }
serde_yml = { workspace = true }
thiserror = { workspace = true }
