[package]
name = "changeset-parse"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Parser for changeset files"
readme = "README.md"
keywords = ["cargo", "changeset", "parser", "yaml", "markdown"]
categories = ["development-tools::cargo-plugins", "parser-implementations"]

[dependencies]
changeset-core = { workspace = true }
indexmap = { workspace = true }
serde = { workspace = true }
serde_with = { version = "3.16.1", features = ["indexmap_2"] }
serde_yml = { workspace = true }
thiserror = { workspace = true }
