[package]
name = "changeset-project"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Cargo project discovery and management for changesets"
readme = "README.md"
keywords = ["cargo", "changeset", "workspace", "release"]
categories = ["development-tools::cargo-plugins"]

[features]
testing = []

[dependencies]
changeset-changelog = { workspace = true }
changeset-core = { workspace = true }
globset = "0.4"
semver = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
anyhow = "1.0"
tempfile = "3.25.0"

[lints]
workspace = true
