[package]
name = "changeset-saga"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Saga pattern for atomic multi-step operations"
readme = "README.md"
keywords = ["saga", "transaction", "rollback", "atomic"]
categories = ["rust-patterns"]

[dependencies]
thiserror = { workspace = true }

[dev-dependencies]
anyhow = "1.0"

[lints]
workspace = true
