[package]
name = "changeset-version"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Version bumping logic for cargo-changeset"

[dependencies]
changeset-core = { workspace = true }
semver = { workspace = true }
toml = { workspace = true }
